style changes, new feedItem layout, aligning fix inside sideBar component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,6 @@
+body {
+  font-family: "Roboto", sans-serif;
+}
 .mainFrame {
   display: flex;
   align-items: center;
