--- a/client/src/components/Account/Account.css
+++ b/client/src/components/Account/Account.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(243, 241, 240);
+  background-color: rgb(255, 255, 255);
+  border: 1px solid #76767626;
   padding: 30px;
-  border-radius: 30px;
-  border: 2px solid white;
-  box-shadow: 5px 0px 30px rgb(165, 164, 164);
-  width: 30vw;
+  border-radius: 15px 15px 15px 15px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+  width: 50vw;
 }
 .profilePic {
   width: 200px;
