--- a/client/src/components/Dms/Dms.css
+++ b/client/src/components/Dms/Dms.css
@@ -1,9 +1,11 @@
 .dmsContainer {
-  align-self: center;
-  background-color: rgb(243, 241, 240);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid #76767626;
   padding: 30px;
-  border-radius: 30px;
-  border: 2px solid white;
-  box-shadow: 5px 0px 30px rgb(165, 164, 164);
-  width: 30vw;
+  border-radius: 15px 15px 15px 15px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
+  width: 50vw;
 }
