--- a/client/src/components/FeedItem/FeedItem.css
+++ b/client/src/components/FeedItem/FeedItem.css
@@ -1,7 +1,8 @@
 .post {
+  font-family: "Roboto", sans-serif;
   background-color: rgb(255, 255, 255);
   border: 1px solid #76767626;
-  border-radius: 0px 0px 15px 15px;
+  border-radius: 15px 15px 15px 15px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
   width: 50vw;
   padding: 30px;
@@ -21,17 +22,19 @@ a:hover {
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
-  align-content: space-around;
-  width: 200px;
-  border-bottom: 1px solid rgb(201, 199, 199);
+  justify-content: space-around;
 }
 .dateAndTime {
   display: flex;
   margin: 0px 30px 0px 30px;
 }
+.time {
+  padding-left: 15px;
+}
 
-.bolding {
-  font-weight: bold;
+.thin {
+  font-weight: lighter;
+  padding-left: 5px;
 }
 
 .thumbnailsInPost {
@@ -39,6 +42,6 @@ a:hover {
   margin: 30px;
 }
 
-.fsu {
+.thumbnail {
   width: 100px;
 }
