--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -36,7 +36,7 @@ button {
 }
 
 .logo {
-  width: 12vw;
+  width: 7vw;
   margin: 0px 40px 0px 0px;
 }
 p {
